# RL-agent-template

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
scripts/: evaluate_cartpole.py  train_cartpole.py
src/minimal_rl_agent/: __init__.py  agent.py  evaluate.py  memory.py  model.py  train.py
src/minimal_rl_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_memory.py
